# OpenTitans

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-publish.yml
docs/: Atlas.md  Atlas_Generation.md  Generation.md  Installation.md  Miras.md  Nested_Learning.md  Neural_Memory.md  OpenTitans.md  Quickstart.md  README.md  Titans_Variants.md
examples/: nested_learning_demo.ipynb  quickstart.ipynb
open_titans/: __init__.py
open_titans/configs/: __init__.py  configuration_atlas.py  configuration_titans.py  configuration_utils.py
open_titans/generation/: __init__.py  generation_mixin.py  memory_utils.py  stopping_criteria.py  titans_cache.py
open_titans/models/: __init__.py  modeling_utils.py
open_titans/models/atlas/: configuration_atlas.py  modeling_atlas.py  registry.py
open_titans/models/miras/: __init__.py  configuration_miras.py  modeling_miras.py  registry.py
open_titans/models/titans/: convert_weights.py  modeling_titans.py
open_titans/models/titans_mac/: __init__.py  configuration_mac.py  modeling_mac.py
open_titans/models/titans_mag/: __init__.py  configuration_mag.py  modeling_mag.py
open_titans/models/titans_mal/: __init__.py  configuration_mal.py  modeling_mal.py
open_titans/modules/: __init__.py
open_titans/modules/attention/: __init__.py  attentional_bias.py  linear_attention.py  sliding_window.py
open_titans/modules/gates/: __init__.py  forget_gates.py  miras_bias.py  retention.py
open_titans/modules/memory/: __init__.py  functional.py  memory_caching.py  memory_model.py  neural_memory.py  retrospective.py  test_time_mem.py  update_rule.py
open_titans/optim/: __init__.py  momentum_sgd.py  muon.py  nested_learning.py  test_time_optim.py
open_titans/trainer/: __init__.py  nested_learning.py  trainer_chronos.py  training_args.py
open_titans/utils/: hardware_utils.py  memory_tracker.py
tests/: test_atlas.py  test_attentional_bias.py  test_generation.py  test_memory_update_rule.py  test_miras.py  test_nested_learning.py  test_neural_memory.py  test_retention_regularization.py  test_titans_mac.py  test_titans_mag.py  test_titans_mal.py
