[project]
name = "open-titans"
version = "0.0.1"
description = "Titans"
authors = [
    { name = "Neeze", email = "nampvh4436@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'test time training',
    'linear attention',
    'memory',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "assoc-scan>=0.0.4",
    "axial_positional_embedding>=0.3.10",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "hyper-connections>=0.3.11",
    "Ninja",
    "rotary-embedding-torch",
    "tensordict",
    "torch>=2.8",
    "tqdm",
    "transformers>=4.30.0",
    "x-transformers"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
