[project]
name = "open-titans"
version = "0.0.5"
description = "Memory-Augmented Sequence Models in Pytorch"
authors = [
    { name = "Neeze", email = "nampvh4436@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'test time training',
    'linear attention',
    'memory-augmented models',
    'neural memory',
    'titans',
    'transformers',
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: OS Independent',
]

dependencies = [
    "assoc-scan>=0.0.4",
    "axial_positional_embedding>=0.3.10",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "hyper-connections>=0.3.11",
    "Ninja",
    "rotary-embedding-torch",
    "tensordict",
    "torch>=2.8",
    "tqdm",
    "transformers>=4.30.0",
    "x-transformers"
]

[project.urls]
"Homepage" = "https://github.com/Neeze/OpenTitans"
"Bug Tracker" = "https://github.com/Neeze/OpenTitans/issues"
"Source Code" = "https://github.com/Neeze/OpenTitans"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["open_titans*"]
